fix spacing on tags on project cards

--- a/themes/muser_base/assets/scss/components/projects/_general.scss
+++ b/themes/muser_base/assets/scss/components/projects/_general.scss
@@ -165,6 +165,9 @@
   .project-detail {
     display: flex;
   }
+  .field--name-field-hours-per-week {
+    max-width: 118px;
+  }
 }
 
 .field--name-field-categories .field__item {
